--- a/StatModels.ipynb
+++ b/StatModels.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f7022763-3cf9-4b95-9cb4-07c8cb3a435e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8d5554e5-deff-4897-8bfd-ddcd03d40ec2",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "[2121 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "365de335-d5f0-48a1-ab15-52f25b33f7e3",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "aa8a836e-f236-4c80-aace-64227705b242",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "840ac92e-106c-4f20-a531-0aedaa360bd8",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "5b854266-fdb6-41c6-80ab-6393f11b988b",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "60169e1d-4b2a-4e10-8de7-d504c09492a1",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "7a34f100-1ece-41fd-aeab-d68b8266bb9b",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "cd6bf989-17a3-4810-8ece-7f92ddc1813a",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "56049276-8457-4eec-8705-3a6a9774742e",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "Index: [2018-01-31 00:00:00, 2018-02-28 00:00:00, 2018-03-31 00:00:00]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "ecb18956-420e-4be1-8f46-9d9067cf0ff2",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "436bc67b-37a3-4ffe-8622-02ee7e0d1a72",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "c4741317-d972-4167-b33a-07b239d96423",
    "metadata": {},
    "outputs": [
@@ -757,8 +757,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2bdcdbf4-b6c7-4e4b-8f67-264b1381051b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ljung-Box Test Results:\n",
+      "      lb_stat  lb_pvalue\n",
+      "1    4.492550   0.034043\n",
+      "2    4.849802   0.088487\n",
+      "3    5.627231   0.131224\n",
+      "4    6.917898   0.140291\n",
+      "5    8.576461   0.127198\n",
+      "6    8.611029   0.196664\n",
+      "7   11.569180   0.115647\n",
+      "8   13.372352   0.099664\n",
+      "9   13.375928   0.146321\n",
+      "10  13.653708   0.189381\n",
+      "11  15.560041   0.158266\n",
+      "12  42.854398   0.000024\n",
+      "13  44.685796   0.000024\n",
+      "14  45.028219   0.000040\n",
+      "15  45.091176   0.000074\n",
+      "16  46.807755   0.000073\n",
+      "17  47.776387   0.000093\n",
+      "18  47.933996   0.000154\n",
+      "19  50.928845   0.000096\n",
+      "20  51.683414   0.000127\n",
+      "21  51.834465   0.000202\n",
+      "22  52.950188   0.000231\n",
+      "23  54.541762   0.000226\n",
+      "24  70.580287   0.000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.diagnostic import acorr_ljungbox\n",
+    "\n",
+    "lb_results = acorr_ljungbox(time_series, lags=min(40, len(time_series)//2), return_df=True)\n",
+    "print(\"Ljung-Box Test Results:\")\n",
+    "print(lb_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab398ca-fa2d-49f1-bbb5-87913acfefb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997d93aa-6cb7-4956-8ad5-24ef83704068",
    "metadata": {},
    "outputs": [],
    "source": []
