--- a/StatModels.ipynb
+++ b/StatModels.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "c4741317-d972-4167-b33a-07b239d96423",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "2bdcdbf4-b6c7-4e4b-8f67-264b1381051b",
    "metadata": {},
    "outputs": [
@@ -804,19 +804,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "383f07d7-e5d4-4535-9004-e5b6b5a3ff3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lb_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "5ab398ca-fa2d-49f1-bbb5-87913acfefb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import chi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "997d93aa-6cb7-4956-8ad5-24ef83704068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lag 1: Q = 4.492550, P-value = 0.034043\n",
+      "Lag 2: Q = 4.849802, P-value = 0.088487\n",
+      "Lag 3: Q = 5.627231, P-value = 0.131224\n",
+      "Lag 4: Q = 6.917898, P-value = 0.140291\n",
+      "Lag 5: Q = 8.576461, P-value = 0.127198\n",
+      "Lag 6: Q = 8.611029, P-value = 0.196664\n",
+      "Lag 7: Q = 11.569180, P-value = 0.115647\n",
+      "Lag 8: Q = 13.372352, P-value = 0.099664\n",
+      "Lag 9: Q = 13.375928, P-value = 0.146321\n",
+      "Lag 10: Q = 13.653708, P-value = 0.189381\n",
+      "Lag 11: Q = 15.560041, P-value = 0.158266\n",
+      "Lag 12: Q = 42.854398, P-value = 0.000024\n",
+      "Lag 13: Q = 44.685796, P-value = 0.000024\n",
+      "Lag 14: Q = 45.028219, P-value = 0.000040\n",
+      "Lag 15: Q = 45.091176, P-value = 0.000074\n",
+      "Lag 16: Q = 46.807755, P-value = 0.000073\n",
+      "Lag 17: Q = 47.776387, P-value = 0.000093\n",
+      "Lag 18: Q = 47.933996, P-value = 0.000154\n",
+      "Lag 19: Q = 50.928845, P-value = 0.000096\n",
+      "Lag 20: Q = 51.683414, P-value = 0.000127\n",
+      "Lag 21: Q = 51.834465, P-value = 0.000202\n",
+      "Lag 22: Q = 52.950188, P-value = 0.000231\n",
+      "Lag 23: Q = 54.541762, P-value = 0.000226\n",
+      "Lag 24: Q = 70.580287, P-value = 0.000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "for lag, q_stat in zip(lb_results.index, lb_results.lb_stat):\n",
+    "    p_value = 1 - chi2.cdf(q_stat, df=lag)\n",
+    "    print(f\"Lag {lag}: Q = {q_stat:.6f}, P-value = {p_value:.6f}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997d93aa-6cb7-4956-8ad5-24ef83704068",
+   "id": "1258a103-cf66-4a56-95f7-a4f39b139616",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We get the P-value by calculating the 1 - Chi square for N with CDF"
+   ]
   }
  ],
  "metadata": {
