--- a/StatModels.ipynb
+++ b/StatModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "c3ed0e47-4389-46d2-988e-9c168051f504",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "f7022763-3cf9-4b95-9cb4-07c8cb3a435e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "8d5554e5-deff-4897-8bfd-ddcd03d40ec2",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "[2121 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
+   "id": "1141eb0e-dfe4-4a58-9341-9ab23b315678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Row ID', 'Order ID', 'Order Date', 'Ship Date', 'Ship Mode',\n",
+       "       'Customer ID', 'Customer Name', 'Segment', 'Country', 'City', 'State',\n",
+       "       'Postal Code', 'Region', 'Product ID', 'Category', 'Sub-Category',\n",
+       "       'Product Name', 'Sales', 'Quantity', 'Discount', 'Profit'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "365de335-d5f0-48a1-ab15-52f25b33f7e3",
    "metadata": {},
    "outputs": [],
@@ -430,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "aa8a836e-f236-4c80-aace-64227705b242",
    "metadata": {},
    "outputs": [],
@@ -440,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "840ac92e-106c-4f20-a531-0aedaa360bd8",
    "metadata": {},
    "outputs": [],
@@ -450,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "5b854266-fdb6-41c6-80ab-6393f11b988b",
    "metadata": {},
    "outputs": [],
@@ -460,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "60169e1d-4b2a-4e10-8de7-d504c09492a1",
    "metadata": {},
    "outputs": [],
@@ -470,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "7a34f100-1ece-41fd-aeab-d68b8266bb9b",
    "metadata": {},
    "outputs": [
@@ -565,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "id": "cd6bf989-17a3-4810-8ece-7f92ddc1813a",
    "metadata": {},
    "outputs": [],
@@ -581,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "56049276-8457-4eec-8705-3a6a9774742e",
    "metadata": {},
    "outputs": [
@@ -628,7 +653,7 @@
        "Index: [2018-01-31 00:00:00, 2018-02-28 00:00:00, 2018-03-31 00:00:00]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "id": "ecb18956-420e-4be1-8f46-9d9067cf0ff2",
    "metadata": {},
    "outputs": [
@@ -668,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "id": "436bc67b-37a3-4ffe-8622-02ee7e0d1a72",
    "metadata": {},
    "outputs": [
@@ -719,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "id": "c4741317-d972-4167-b33a-07b239d96423",
    "metadata": {},
    "outputs": [
@@ -757,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "id": "2bdcdbf4-b6c7-4e4b-8f67-264b1381051b",
    "metadata": {},
    "outputs": [
@@ -804,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "id": "383f07d7-e5d4-4535-9004-e5b6b5a3ff3b",
    "metadata": {},
    "outputs": [
@@ -814,7 +839,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "id": "5ab398ca-fa2d-49f1-bbb5-87913acfefb4",
    "metadata": {},
    "outputs": [],
@@ -835,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "id": "997d93aa-6cb7-4956-8ad5-24ef83704068",
    "metadata": {},
    "outputs": [
@@ -878,13 +903,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "1258a103-cf66-4a56-95f7-a4f39b139616",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We get the P-value by calculating the 1 - Chi square for N with CDF"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "911e9869-5ee9-48f6-9ed1-73468ca0c877",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Row ID', 'Order ID', 'Order Date', 'Ship Date', 'Ship Mode',\n",
+       "       'Customer ID', 'Customer Name', 'Segment', 'Country', 'City', 'State',\n",
+       "       'Postal Code', 'Region', 'Product ID', 'Category', 'Sub-Category',\n",
+       "       'Product Name', 'Sales', 'Quantity', 'Discount', 'Profit',\n",
+       "       'Time of Day', 'Holiday'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "5a46b7d7-1ea3-4907-8f23-1d5270f00ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic: -4.699026242828901, p-value: 8.450793985809693e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "result = adfuller(time_series)\n",
+    "print(f\"ADF Statistic: {result[0]}, p-value: {result[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "5df870af-b873-40ab-93ee-4803308b7b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARIMA(0,1,0) - AIC:1005.373641264173 BIC:1007.2237888658831\n",
+      "ARIMA(0,1,1) - AIC:994.2446376692202 BIC:997.9449328726403\n",
+      "ARIMA(0,1,2) - AIC:994.8502225261637 BIC:1000.4006653312939\n",
+      "ARIMA(0,1,3) - AIC:997.0404556836068 BIC:1004.441046090447\n",
+      "ARIMA(1,1,0) - AIC:999.1166037056392 BIC:1002.8168989090593\n",
+      "ARIMA(1,1,1) - AIC:994.7447798905674 BIC:1000.2952226956976\n",
+      "ARIMA(1,1,2) - AIC:996.5084692349537 BIC:1003.909059641794\n",
+      "ARIMA(1,1,3) - AIC:998.7795775991752 BIC:1008.0303156077256\n",
+      "ARIMA(2,1,0) - AIC:996.3001515631214 BIC:1001.8505943682516\n",
+      "ARIMA(2,1,1) - AIC:998.3130305829334 BIC:1005.7136209897736\n",
+      "ARIMA(2,1,2) - AIC:997.2772233018097 BIC:1006.5279613103601\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ajinf\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n",
+      "C:\\Users\\ajinf\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-stationary starting autoregressive parameters'\n",
+      "C:\\Users\\ajinf\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-invertible starting MA parameters found.'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARIMA(2,1,3) - AIC:994.1556654738505 BIC:1005.2565510841108\n",
+      "ARIMA(3,1,0) - AIC:998.2959112605791 BIC:1005.6965016674194\n",
+      "ARIMA(3,1,1) - AIC:997.7948914850685 BIC:1007.0456294936189\n",
+      "ARIMA(3,1,2) - AIC:999.1398078198692 BIC:1010.2406934301296\n",
+      "ARIMA(3,1,3) - AIC:993.2956661792405 BIC:1006.2466993912109\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ajinf\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\statsmodels\\base\\model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "\n",
+    "best_aic = float('inf')\n",
+    "best_order = None\n",
+    "best_model = None\n",
+    "d = 1\n",
+    "\n",
+    "for p in range(0, 4):\n",
+    "    for q in range(0, 4):\n",
+    "        model = ARIMA(time_series, order=(p, d, q)).fit()\n",
+    "        print(f\"ARIMA({p},{d},{q}) - AIC:{model.aic} BIC:{model.bic}\")\n",
+    "        if model.aic < best_aic:\n",
+    "            best_aic = model.aic\n",
+    "            best_order = (p, d, q)\n",
+    "            best_model = model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "d10f59e6-c6b4-43e8-9e68-5c31f1400fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-01-31    20107.816485\n",
+      "2018-02-28    26046.855746\n",
+      "2018-03-31    24005.848952\n",
+      "2018-04-30    16814.498245\n",
+      "2018-05-31    24703.430307\n",
+      "2018-06-30    22807.662425\n",
+      "2018-07-31    16558.721434\n",
+      "2018-08-31    24785.927983\n",
+      "2018-09-30    22309.915014\n",
+      "2018-10-31    16674.669580\n",
+      "Freq: ME, Name: predicted_mean, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "forecast = best_model.forecast(steps=10)\n",
+    "print(forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9733ab56-c668-4856-8766-961bb001adfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is idea on how we calculate the coefficients for AR and MA in ARIMA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "3c02dfb8-3628-4a79-a8cc-832569e9768f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated φ (AR coefficient): 0.8469\n",
+      "Estimated θ (MA coefficient): 0.8318\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_phi, best_theta = 0, 0\n",
+    "min_sse = float('inf')\n",
+    "\n",
+    "for phi_test in np.arange(-1.0, 1.0, 0.1):\n",
+    "    for theta_test in np.arange(-1.0, 1.0, 0.1):\n",
+    "        # print(phi_test, theta_test)\n",
+    "        eps_hat = [0]\n",
+    "        sse = 0\n",
+    "        for t in range(1, len(y)):\n",
+    "            y_hat = phi_test * y[t-1] + theta_test * eps_hat[t-1]\n",
+    "            eps_t = y[t] - y_hat\n",
+    "            eps_hat.append(eps_t)\n",
+    "            sse += eps_t ** 2\n",
+    "        if sse < min_sse:\n",
+    "            min_sse = sse\n",
+    "            best_phi = phi_test\n",
+    "            best_theta = theta_test\n",
+    "\n",
+    "print(f\"Estimated φ: {best_phi}, θ: {best_theta}, SSE: {min_sse:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f669528f-c82b-440c-ad1a-ed06303e52cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
